Se crean las rutas de nuestra app, rutas hijas de auth y reactive, usando loadlazy

--- a/src/app/auth/pages/register-pages/register-pages.component.html
+++ b/src/app/auth/pages/register-pages/register-pages.component.html
@@ -94,20 +94,20 @@
 <h2>Form Status: </h2>
 <h2>Form Pending: </h2>
 <h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
 
 <h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
 
 <h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
 
 <h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
 
 
 <h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
 
 <h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<!-- <pre>{{ 'formulario' | json }}</pre> -->
