--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -73,21 +73,21 @@
     <div class="col">
 
         <span>Valid</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
 
         <span>Pristine</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
 
         <span>Touched</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
 
         <span>Value</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
 
         <span>Precio</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
 
         <span>Producto</span>
-        <pre>{{ 'objeto' | json }}</pre>
+        <!-- <pre>{{ 'objeto' | json }}</pre> -->
     </div>
 </div>
