--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -77,13 +77,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
+<!-- <pre>{{ 'object' | json }}</pre> -->
