--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -81,15 +81,15 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
 <br>
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre> -->
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
