--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>Formularios reactivos</h1>
+<div class="row mt-5">
+  <div class="col">
+    <router-outlet />
+  </div>
+  <div class="col-12 col-sm-4">
+    <shared-side-menu />
+  </div>
+</div>
 
-<router-outlet />
