--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -3,8 +3,7 @@
 
 <div class="row">
     <div class="col">
-
-        <form autocomplete="off">
+        <form [formGroup]="myForm" (ngSubmit)="onSave()"  autocomplete="off">
 
             <!-- Campo de producto -->
             <div class="mb-3 row">
@@ -13,7 +12,9 @@
 
                     <input type="text"
                            class="form-control"
-                           placeholder="Nombre del producto">
+                           placeholder="Nombre del producto"
+                           formControlName="name"
+                           >
 
                     <span class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
@@ -28,7 +29,9 @@
                 <div class="col-sm-9">
                     <input type="number"
                            class="form-control"
-                           placeholder="Precio del producto">
+                           placeholder="Precio del producto"
+                           formControlName="price"
+                           >
                     <span class="form-text text-danger">
                         El precio debe de ser 0 o mayor
                     </span>
@@ -41,7 +44,9 @@
                 <div class="col-sm-9">
                     <input type="number"
                            class="form-control"
-                           placeholder="Existencias del producto">
+                           placeholder="Existencias del producto"
+                           formControlName="inStorage"
+                           >
 
                     <span class="form-text text-danger">
                          Las existencias deben de ser 0 o mayor
