--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -16,9 +16,16 @@
                            formControlName="name"
                            >
 
-                    <span class="form-text text-danger">
+                    <span
+                      *ngIf="myForm.controls['name'].getError('required')"
+                      class="form-text text-danger">
+                      Este campo es requerido
+                    </span>
+                    <span
+                      *ngIf="myForm.controls['name'].getError('minlength')"
+                      class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        error message
+                        Este campo requiere mínimo 3 letras
                     </span>
                 </div>
             </div>
