ahora se agrega que la validación aparezca después de haber sido manipulado mi formulario, y si no llena nada y da en el botón de guardar, le salga también los errores

--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -17,12 +17,12 @@
                            >
 
                     <span
-                      *ngIf="myForm.controls['name'].getError('required')"
+                      *ngIf="myForm.controls['name'].getError('required') && myForm.controls['name'].touched"
                       class="form-text text-danger">
                       Este campo es requerido
                     </span>
                     <span
-                      *ngIf="myForm.controls['name'].getError('minlength')"
+                      *ngIf="myForm.controls['name'].getError('minlength') && myForm.controls['name'].touched"
                       class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
                         Este campo requiere mínimo 3 letras
