--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -17,15 +17,9 @@
                            >
 
                     <span
-                      *ngIf="myForm.controls['name'].getError('required') && myForm.controls['name'].touched"
+                      *ngIf="isValidField('name')"
                       class="form-text text-danger">
-                      Este campo es requerido
-                    </span>
-                    <span
-                      *ngIf="myForm.controls['name'].getError('minlength') && myForm.controls['name'].touched"
-                      class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        Este campo requiere mínimo 3 letras
+                      {{ getFieldError('name') }}
                     </span>
                 </div>
             </div>
@@ -39,7 +33,7 @@
                            placeholder="Precio del producto"
                            formControlName="price"
                            >
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
                         El precio debe de ser 0 o mayor
                     </span>
                 </div>
@@ -55,7 +49,7 @@
                            formControlName="inStorage"
                            >
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('inStorage')"  class="form-text text-danger">
                          Las existencias deben de ser 0 o mayor
                     </span>
                 </div>
