--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -10,8 +10,8 @@
             <input class="form-control"
                    placeholder="Nombre de la persona"
                    formControlName="name">
-            <span class="form-text text-danger">
-                   error message
+            <span *ngIf="isValidField('name')" class="form-text text-danger">
+                   {{ getFieldError('name') }}
             </span>
         </div>
     </div>
@@ -53,9 +53,9 @@
                   </button>
                 </div>
 
-                <span class="form-text text-danger">
-                   Este campo es requerido
-                </span>
+                <span *ngIf="isValidFielInArray(favoriteGames,i)" class="form-text text-danger">
+                  Este campo es requerido
+           </span>
 
             </div>
 
