--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -23,11 +23,13 @@
 
             <div class="input-group">
                 <input class="form-control"
-                       placeholder="Agregar favorito">
+                       placeholder="Agregar favorito"
+                       [formControl]="newFavorite">
 
 
                 <button class="btn btn-outline-primary"
-                        type="button">
+                        type="button"
+                        (click)="onAddToFavorites()">
                     Agregar favorito
                 </button>
             </div>
@@ -48,7 +50,8 @@
                       [formControlName]="i">
 
                     <button class="btn btn-outline-danger"
-                            type="button">
+                            type="button"
+                            (click)="onDeleteFavorite(i)">
                       Eliminar
                   </button>
                 </div>
@@ -68,8 +71,8 @@
         <div class="col-sm-12">
             <button type="submit"
                     class="btn btn-primary float-end"
+                    [disabled]="myForm.invalid"
                     >
-                    <!-- [disabled]="myForm.invalid" -->
                 Guardar
             </button>
         </div>
@@ -81,13 +84,13 @@
 
 
 <span>Valid</span>
-<!-- <pre>{{ 'object' | json }}</pre> -->
+<pre>{{ myForm.valid| json }}</pre>
 <br>
 
 <span>Value</span>
-<!-- <pre>{{ 'object' | json }}</pre> -->
+<pre>{{ myForm.value| json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<!-- <pre>{{ 'object' | json }}</pre> -->
-<!-- <pre>{{ 'object' | json }}</pre> -->
+<pre>{{ newFavorite.touched| json }}</pre>
+<pre>{{ newFavorite.value| json }}</pre>
