--- a/src/app/auth/pages/register-pages/register-pages.component.html
+++ b/src/app/auth/pages/register-pages/register-pages.component.html
@@ -108,7 +108,7 @@
 <pre>{{ myForm.controls['email'].value | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ myForm.controls['userName'].value | json }}</pre>
+<pre>{{ myForm.controls['userName'].errors | json }}</pre>
 
 
 <h5>Password</h5>
