--- a/src/app/auth/pages/register-pages/register-pages.component.html
+++ b/src/app/auth/pages/register-pages/register-pages.component.html
@@ -15,7 +15,7 @@
                            placeholder="Nombre del usuario"
                            formControlName="name">
 
-                    <span class="form-text text-danger">
+                    <span  *ngIf="isValidField('name')" class="form-text text-danger">
                         Debe de ser en formato de nombre y apellido
                     </span>
                 </div>
@@ -29,8 +29,8 @@
                            class="form-control"
                            placeholder="Email del usuario"
                            formControlName="email">
-                    <span class="form-text text-danger">
-                        mensaje de error del email
+                    <span *ngIf="isValidField('email')" class="form-text text-danger">
+                        Debe ser un correro valido
                     </span>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                            class="form-control"
                            placeholder="Nombre código del usuario"
                            formControlName="userName">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('userName')" class="form-text text-danger">
                          El username no puede ser Strider
                     </span>
                 </div>
@@ -58,7 +58,7 @@
                            placeholder="Password de su cuenta"
                            formControlName="password">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('password')" class="form-text text-danger">
                          La contraseña debe de ser mayor de 6 caracteres.
                     </span>
                 </div>
@@ -73,7 +73,7 @@
                            placeholder="Confirmar la contraseña"
                            formControlName="confirmedPassword">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('confirmedPassword')" class="form-text text-danger">
                          Las contraseñas deben de ser iguales
                     </span>
                 </div>
