Verificar que dos campos sean iguales

--- a/src/app/auth/pages/register-pages/register-pages.component.html
+++ b/src/app/auth/pages/register-pages/register-pages.component.html
@@ -115,4 +115,4 @@
 <pre>{{ myForm.controls['password'].value | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ myForm.controls['confirmedPassword'].value | json }}</pre>
+<pre>{{ myForm.controls['confirmedPassword'].errors | json }}</pre>
